--- a/plany/n21.html
+++ b/plany/n21.html
@@ -7,6 +7,11 @@
 <script language="JavaScript1.2" type="text/javascript" src="../scripts/plan.js"></script>
 </head>
 <body>
+<style>
+.p {
+  color: red;
+}
+</style>
 <table border="0" cellpadding="0" cellspacing="0" width="100%" class="tabtytul">
 <tr>
 <td class="tytul">
@@ -105,3 +110,4 @@ firmy <a href="http://www.vulcan.edu.pl/" target="_blank">VULCAN</a></td>
 </td></tr></table></div>
 </body>
 </html>
+
