--- a/plany/o7.html
+++ b/plany/o7.html
@@ -33,7 +33,7 @@
 <tr>
 <td class="nr">1</td>
 <td class="g"> 8:00- 8:45</td>
-<td class="l"><span style="font-size:85%"><style="color: yellow;">informatyka-1/2</span> <a href="n48.html" class="n">WG</a> <a href="s3.html" class="s">8B</a></span><br><span style="font-size:85%"><style="color: yellow;">informatyka-2/2</span> <a href="n49.html" class="n">MY</a> <a href="s2.html" class="s">8A</a></span></td>
+<td class="l"><span style="font-size:85%"><span style="color: yellow;">informatyka-1/2</span> <a href="n48.html" class="n">WG</a> <a href="s3.html" class="s">8B</a></span><br><span style="font-size:85%"><span style="color: yellow;">informatyka-2/2</span> <a href="n49.html" class="n">MY</a> <a href="s2.html" class="s">8A</a></span></td>
 <td class="l">&nbsp;</td>
 <td class="l">&nbsp;</td>
 <td class="l"><span class="p">r_biologia</span> <a href="n31.html" class="n">RS</a> <a href="s4.html" class="s">11</a></td>
@@ -119,5 +119,6 @@ firmy <a href="http://www.vulcan.edu.pl/" target="_blank">VULCAN</a></td>
 </td></tr></table></div>
 </body>
 </html>
+
 
 
