--- a/plany/o7.html
+++ b/plany/o7.html
@@ -7,11 +7,14 @@
 <script language="JavaScript1.2" type="text/javascript" src="../scripts/plan.js"></script>
 </head>
 <body>
+
 <style>
 .p {
   color: red;
 }
 </style>
+
+
 <table border="0" cellpadding="0" cellspacing="0" width="100%" class="tabtytul">
 <tr>
 <td class="tytul">
@@ -33,7 +36,7 @@
 <tr>
 <td class="nr">1</td>
 <td class="g"> 8:00- 8:45</td>
-<td class="l"><span style="font-size:85%"><span style="color: yellow;">informatyka-1/2</span> <a href="n48.html" class="n">WG</a> <a href="s3.html" class="s">8B</a></span><br><span style="font-size:85%"><span style="color: yellow;">informatyka-2/2</span> <a href="n49.html" class="n">MY</a> <a href="s2.html" class="s">8A</a></span></td>
+<td class="l"><span style="font-size:85%"><span style="color: yellow;">informatyka-1/2</span> <a href="n48.html" class="n">WG</a> <a href="s3.html" class="s">8B</a></span><br><span style="font-size:85%"><span style="color: yellow;>informatyka-2/2</span> <a href="n49.html" class="n">MY</a> <a href="s2.html" class="s">8A</a></span></td>
 <td class="l">&nbsp;</td>
 <td class="l">&nbsp;</td>
 <td class="l"><span class="p">r_biologia</span> <a href="n31.html" class="n">RS</a> <a href="s4.html" class="s">11</a></td>
@@ -119,6 +122,3 @@ firmy <a href="http://www.vulcan.edu.pl/" target="_blank">VULCAN</a></td>
 </td></tr></table></div>
 </body>
 </html>
-
-
-
